Alinhamento Centralizado Botão Cadastre-se

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <p>É rápido e fácil.</p>
         </div>
 
-        <form action="">
+        <form action="index.html" method="POST">
 
             <input type="text" name="nome" id="nome" placeholder="Nome" required>
             <input type="text" name="sobrenome" id="sobrenome" placeholder="Sobrenome" required>
@@ -131,14 +131,10 @@
             </div>
 
             <div class="flex-container">
-
                 <button id="btnCadastrar" type="submit">Cadastre-se</button>
- 
             </div>  
 
         </form>
-
-        
 
     </div>
 
