Alinhamento Centralizado Botão Cadastre-se

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <p>É rápido e fácil.</p>
         </div>
 
-        <form action="index.html" method="POST">
+        <form action="index.html" method="GET">
 
             <input type="text" name="nome" id="nome" placeholder="Nome" required>
             <input type="text" name="sobrenome" id="sobrenome" placeholder="Sobrenome" required>
